--- a/package.json
+++ b/package.json
@@ -5,15 +5,29 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose --watchAll"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "hash-it": "^6.0.0",
     "multer": "^1.4.5-lts.1",
-    "nodejs": "^0.0.0",
+    "nanoid": "^5.0.3",
+    "nodejs": "^0.0.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.23.3",
+    "@types/jest": "^29.5.8",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
   }
 }
