--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "wsrp_server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest --verbose --watchAll"
+    "test": "jest --verbose --watchAll",
+    "server": "nodemon ./src/Server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "hash-it": "^6.0.0",
+    "mongodb": "^6.3.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.3",
     "nodejs": "^0.0.0"
