--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.1",
+    "base64-js": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "blob-util": "^2.0.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.2",
     "hash-it": "^6.0.0",
     "mongodb": "^6.3.0",
     "multer": "^1.4.5-lts.1",
