--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "base64-js": "^1.5.1",
     "bcrypt": "^5.1.1",
     "blob-util": "^2.0.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "fluent-ffmpeg": "^2.1.2",
     "hash-it": "^6.0.0",
     "mongodb": "^6.3.0",
